# pht_eb_stats2

./: .flake8  .gitignore  CHANGES.md  LICENSE  README.md  Results.md  pyproject.toml
data/: asas_sn_is_eb.csv  asas_sn_meta.csv  asas_sn_meta_rejected.csv  catalog_pht_eb_candidates.csv  gaia_dr3_meta_rejected.csv  gaia_dr3_var_meta.csv  pht_subj_comments_summary.csv  pht_subj_ids.csv  pht_subj_ids_raw.csv  pht_subj_meta.csv  pht_tic_ids.csv  simbad_is_eb.csv  simbad_meta_rejected.csv  simbad_typemap.csv  tesseb_meta.csv  tic_eb_rank_groups.csv  tic_pht_stats.csv  users_num_users.csv  users_top_cum_contributions.csv  vetting_statuses.csv  vsx_is_eb.csv  vsx_meta.csv  vsx_meta_rejected.csv
data/auxillary/: README.md  pht_tag_map.csv  simbad_otype_nodes.json  simbad_typemap.csv  tic_passband_meta.csv  vsx_passband_map.csv  vsx_vartype_map.csv
docs/: passbands.ods  tic_eb_vetting.ods
src/: Processing.md  asas_sn_meta.py  catalog.py  catalog_stats.py  catalog_utils.py  common.py  dashboard.ipynb  dashboard_browser.ipynb  dashboard_participants.ipynb  dashboard_tesseb_comparison.ipynb  dashboard_utils.py  gaia_meta.py  pht_subj_comments.py  pht_subj_comments_per_comment.py  pht_subj_comments_per_subject.py  pht_subj_ids.py  pht_subj_meta.py  pht_tic_ids.py  playground.ipynb  simbad_meta.py  tesseb_meta.py  tic_meta.py  tic_pht_stats.py  user_stats.py  vetting_meta.py  vsx_meta.py  vsx_vartype_scrapper.js  xmatch_util.py
vetting/: EB_V_117739806.ipynb  EB_V_12931121.ipynb  EB_V_13098251.ipynb  EB_V_139570309.ipynb  EB_V_14081980.ipynb  EB_V_143669444.ipynb  EB_V_190693377.ipynb  EB_V_198537349.ipynb  EB_V_2013258.ipynb  EB_V_259070502.ipynb  EB_V_29658499.ipynb  EB_V_356974629.ipynb  EB_V_382517745.ipynb  EB_V_4200337.ipynb  EB_V_4918918.ipynb  EB_V_72331.ipynb  EB_V_8153514.ipynb  EB_Vetting_Template.ipynb  eb_vetting_status.ods  lightkurve_ext.py  prefetch_products.py  vetting_utils.py
vetting/data/: tess_ctois.csv  tess_mom_dumps.txt  tess_tois.csv
vetting/data/asas-sn/: asas-sn_tic281581467_light_curve_829f5083-de42-46df-b29d-aefdca8ec627.csv
