[tool.poetry]
name = "pht_eb_stats2"
version = "0.1.0"
description = "Planet Hunters TESS Eclipsing Binary Candidates"
license = "MIT"
authors = ["Sam Lee"]
readme = "README.md"
repository = ""
keywords = ["NASA", "TESS", "Astronomy", "Variable Star", "Eclipsing Binary", "Lightcurve"]
# Indicate to poetry that this is not a python package
#  https://github.com/python-poetry/poetry/issues/1148#issuecomment-501462169
classifiers = [
  "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = ">=3.8.0"
requests
pandas
tqdm
numpy
ratelimit


[tool.poetry.dev-dependencies]
black = ">=20.8"
flake8 = ">=3.8.4"

[tool.black]
line-length = 127
target-version = ['py38']
extend-exclude = '''
^/.vscode/
'''
