[tool.poetry]
name = "pht_eb_stats2"
version = "0.1.0"
description = "Planet Hunters TESS Eclipsing Binary Candidates"
license = "MIT"
authors = ["Sam Lee"]
readme = "README.md"
repository = ""
keywords = ["NASA", "TESS", "Astronomy", "Variable Star", "Eclipsing Binary", "Lightcurve"]
# Indicate to poetry that this is not a python package
#  https://github.com/python-poetry/poetry/issues/1148#issuecomment-501462169
classifiers = [
  "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.28.0"
pandas = "^1.4.2"
tqdm = "^4.64.0"
numpy = "^1.22.4"
ratelimit = "^2.2.1"
astroquery = "^0.4.6"
matplotlib = { version = "^3.5.2", optional = true }  # Optional plotting

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
flake8 = ">=4.0.1"

[tool.black]
line-length = 127
target-version = ['py38']
extend-exclude = '''
^/.vscode/
'''
