[tool.poetry]
name = "pht_eb_stats2"
version = "0.1.0"
description = "Planet Hunters TESS Eclipsing Binary Candidates"
license = "MIT"
authors = ["Sam Lee"]
readme = "README.md"
repository = "https://github.com/orionlee/pht_eb_stats2"
keywords = ["NASA", "TESS", "Astronomy", "Variable Star", "Eclipsing Binary", "Lightcurve"]
# Indicate to poetry that this is not a python package
#  https://github.com/python-poetry/poetry/issues/1148#issuecomment-501462169
classifiers = [
  "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.28.0"
pandas = "^1.4.2"
tqdm = "^4.64.0"
numpy = "^1.22.4"
ratelimit = "^2.2.1"
astroquery = "^0.4.6"
notebook = { version = "^6.4.0", optional = true }  # for notebook dashboard
ipywidgets = { version = "^7.7.1", optional = true }  # for notebook dashboard
matplotlib = { version = "^3.5.2", optional = true }  # for notebook dashboard
memoization = { version = "^0.4.0", optional = true }  # for notebook dashboard
tabulate = { version = "^0.8.10", optional = true }  # for dataframe.to_markdown()
lightkurve = { version="^2.3.0", optional = true }  # for vetting individual EBs
xmltodict = { version="^0.13.0", optional = true }  # for vetting individual EBs
ipympl = { version = "^0.9.2", optional = true }  # for vetting individual EBs (interactive matplotlib, extra optional)
beautifulsoup4 = { version="^4.11.1", optional = true }  # for supplementary data used in vetting (live TESS EB data)

[tool.poetry.extras]
dashboard = ["notebook", "ipywidgets", "matplotlib", "memoization", "tabulate"]
vetting = ["lightkurve", "xmltodict", "ipympl", "beautifulsoup4"]


[tool.poetry.dev-dependencies]
black = ">=22.3.0"
flake8 = ">=4.0.1"

[tool.black]
line-length = 127
target-version = ['py38']
extend-exclude = '''
^/.vscode/
'''
